tests/base/invalid/Return_CompileFail_6.whiley
import whiley.lang.*:*

int f(bool x, bool y):
    return x && !y

